# ttsclient

./: .gitignore  README.md  README_cn.md  README_en.md  README_ko.md  build.bat  licenses_flat.json  mypy.ini  pyproject.toml  w_okada's_TextToSpeech_version_2_x.ipynb
GPT_SoVITS/configs/: tts_infer.yaml
client/typescript/: .npmignore  package-lock.json  package.json  tsconfig.json  webpack.common.cjs  webpack.dev.cjs  webpack.prod.cjs
client/typescript-demo/: .prettierrc  build-voice-changer-js.bat  build-voice-changer-js.sh  license.js  package-lock.json  package.json  webpack.common.cjs  webpack.dev.cjs  webpack.prod.cjs
client/typescript-demo/public/: index.html  licenses-js.json  sorted-licenses.json
client/typescript-demo/src/: const.ts  i18n.ts  index.tsx
client/typescript-demo/utils/: 01_check_translation_key_used.js  02_check_translation_key_include_t_func_param.js  03_diff_i18json_against_en.js  04_sort_i18json_same_as_en.js
client/typescript/src/: FileUploaderClient.ts  RestClient.ts  const.ts  index.ts
scripts/: license_manager.py  version_manager.py
settings/: tts_conf.json
ttsclient/: app_status.py  const.py  logger.py  main.py  version.txt
ttsclient/misc/: download_eunjeon.py
ttsclient/proxy/: ngrok_proxy_manager.py
ttsclient/server/: event_emitter.py  event_emitter_manager.py  key_generator.py  tts_server.py  tts_server_rest_api.py  tts_server_rest_api_configuration_manager.py  tts_server_rest_api_gpu_device_manager.py  tts_server_rest_api_hello.py  tts_server_rest_api_module_manager.py  tts_server_rest_api_slot_manager.py  tts_server_rest_api_tts_manager.py  tts_server_rest_api_voice_character_slot_manager.py  tts_server_socketio.py  tts_server_socketio_namespace.py  tts_server_socketio_server.py  validation_error_logging_route.py
ttsclient/server/fileuploader/: fileuploader.py
ttsclient/utils/: download_callback.py  is_running_on_colab.py  list_active_thread.py  parseBoolArg.py  resolve_url.py
web_front/: index.html  index.js  licenses-js.json  licenses-py.json
(+156 files in other folders)
